force-app/main/default/objects/Opportunity/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project</label>
    <referenceTo>BuildingProject__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>