force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer has not received the order</fullName>
            </value>
            <value>
                <fullName>RAICO (Price)</fullName>
            </value>
            <value>
                <fullName>RAICO (Technical solution)</fullName>
            </value>
            <value>
                <fullName>Customer has not submitted an offer</fullName>
            </value>
            <value>
                <fullName>Project will not be executed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>