force-app/main/default/objects/Opportunity/fields/Object_Description__c.field-meta.xml
<CustomField>
    <fullName>Object_Description__c</fullName>
    <label>Object Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>