force-app/main/default/objects/Opportunity/fields/OrderEntryAtFabricator__c.field-meta.xml
<CustomField>
    <fullName>OrderEntryAtFabricator__c</fullName>
    <label>Order Entry at Fabricator</label>
    <type>Date</type>
</CustomField>