force-app/main/default/objects/Opportunity/fields/Other_Loss_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Other_Loss_Reasons__c</fullName>
    <description>If &apos;other&apos; is chosen.</description>
    <inlineHelpText>Wenn kein passender Absagegrund zur Auswahl steht.</inlineHelpText>
    <label>Other Loss Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>