force-app/main/default/objects/Opportunity/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <description>Dieser Feld speichert diese Phase, in der die Opportunity vorher war, sobald eine Opportunity auf Closed Won gesetzt wurde</description>
    <label>Previous Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>