force-app/main/default/objects/Opportunity/fields/Quote_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Grand_Total__c</fullName>
    <description>Shows the grand total sum of all quotes associated to this opportunity</description>
    <label>Quote Grand Total</label>
    <summarizedField>Quote.Grand_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>notEqual</operation>
        <value>Abgelehnt</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>