force-app/main/default/objects/Opportunity/fields/util_ShowFields__c.field-meta.xml
<CustomField>
    <fullName>util_ShowFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A Field to hide fields via conditions</description>
    <label>util_ShowFields</label>
    <type>Checkbox</type>
</CustomField>