force-app/main/default/objects/Opportunity/recordTypes/DailyBusiness.recordType-meta.xml
<RecordType>
    <fullName>DailyBusiness</fullName>
    <active>true</active>
    <businessProcess>Opportunity</businessProcess>
    <label>Daily Business</label>
</RecordType>