force-app/main/default/objects/Opportunity/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <businessProcess>Opportunity</businessProcess>
    <label>Opportunity</label>
</RecordType>