force-app/main/default/objects/Opportunity/validationRules/V11_LossReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>V11_LossReasonRequired</fullName>
    <active>true</active>
    <description>When an opportunity is lost the field &quot;Loss Reason&quot; should appear as required</description>
    <errorConditionFormula>IF(TEXT(StageName) = &apos;Closed Lost&apos;, 
ISBLANK(TEXT(Loss_Reason__c)),
FALSE)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Please fill out the loss reason.</errorMessage>
</ValidationRule>